--- a/css/style.css
+++ b/css/style.css
@@ -256,3 +256,47 @@ body.light-mode .horizontal-scroll::-webkit-scrollbar-thumb {
     object-fit: cover;
     height: 200px;
 }
+
+.footer-custom {
+    background-color: rgb(3, 1, 37); 
+    color: white;
+}
+
+.footer-custom a {
+    transition: color 0.3s ease;
+}
+
+.footer-custom a:hover {
+    color: var(--button-hover-color) !important; 
+}
+
+.social-link {
+    color: white;
+    font-size: 1.5rem;
+}
+
+.social-link:hover {
+    color: #007bff !important; 
+}
+
+body.light-mode .footer-custom {
+    background-color: rgb(190, 200, 220); 
+    color: #333;
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+body.light-mode .footer-custom h5 {
+    color: #333;
+}
+
+body.light-mode .footer-custom p {
+    color: rgba(51, 51, 51, 0.7) !important;
+}
+
+body.light-mode .footer-custom a {
+    color: #333 !important;
+}
+
+body.light-mode .social-link {
+    color: #333;
+}
