--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,6 @@ body {
 nav {
     background-color: rgb(4,9,38);
     padding-top: 10px; 
-    padding-bottom: 10px;
 }
 
 .navbar-nav .nav-link {
@@ -25,10 +24,10 @@ nav {
     padding-bottom: 20px !important;
     font-size: 1.1rem; /* Opcional: Aumenta um pouco o tamanho da fonte */
 }
-
-.main {
-    margin-top: 250px;
+main {
+    margin-top: 20px; 
 }
+
 .main #sobremim {
     background-color: rgb(3, 1, 37);
 }
